@@ -1,23 +1,24 @@
 HOSTS:
-  el6:
+  oel6:
     roles:
       - server
       - default
       - master
       - client
     platform: el-6-x86_64
-    box: centos/6
+    box: elastic/oel-6-x86_64
     hypervisor: vagrant
 
-  el7:
+  oel7:
     roles:
       - client
     platform: el-7-x86_64
-    box: centos/7
+    box: elastic/oel-7-x86_64
     hypervisor: vagrant
 
 CONFIG:
   log_level: verbose
   synced_folder : disabled
   type: aio
+  puppet_collection: puppet5
   vagrant_memsize: 256
