@@ -1,0 +1,48 @@
+HOSTS:
+  el6:
+    roles:
+      - server
+      - default
+      - master
+      - client
+    platform: el-6-x86_64
+    box: centos/6
+    hypervisor: vagrant
+    repos:
+      simp:
+        url: https://dl.bintray.com/simp/4.2.0-Beta2
+        gpgkeys:
+          - https://raw.githubusercontent.com/NationalSecurityAgency/SIMP/master/GPGKEYS/RPM-GPG-KEY-SIMP
+          - https://getfedora.org/static/0608B895.txt
+  el7:
+    roles:
+      - client
+    platform: el-7-x86_64
+    box: centos/7
+    hypervisor: vagrant
+    repos:
+      simp:
+        url: https://dl.bintray.com/simp/5.1.0-Beta
+        gpgkeys:
+          - https://raw.githubusercontent.com/NationalSecurityAgency/SIMP/master/GPGKEYS/RPM-GPG-KEY-SIMP
+          - https://getfedora.org/static/352C64E5.txt
+
+  leap42:
+    roles:
+      - client
+    platform: sles-12-x86_64
+    box: M0ses/openSUSE-Leap-42.1-minimal
+    hypervisor: vagrant
+    repos:
+      simp:
+        url: https://dl.bintray.com/simp/4.2.0-Beta2
+        gpgkeys:
+          - https://raw.githubusercontent.com/NationalSecurityAgency/SIMP/master/GPGKEYS/RPM-GPG-KEY-SIMP
+          - https://getfedora.org/static/0608B895.txt
+
+CONFIG:
+  log_level: verbose
+  synced_folder : disabled
+  type: aio
+  puppet_collection: puppet5
+  vagrant_memsize: 256
