@@ -1,5 +1,9 @@
+* Sun Mar 04 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 1.0.3-0
+- Validate functionality under Puppet 5
+- Test against Oracle Enterprise Linux
+
 * Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 1.0.2-0
-- Confine puppet version in metadata.json 
+- Confine puppet version in metadata.json
 
 * Tue Dec 13 2016 Nick Markowski <nmarkowski@keywcorp.com> - 1.0.1-0
 - Strong typed the module
